--- a/ipv8/build.gradle
+++ b/ipv8/build.gradle
@@ -1,4 +1,4 @@
-apply plugin: 'com.android.application'
+apply plugin: 'com.android.library'
 
 apply plugin: 'kotlin-android'
 
@@ -10,7 +10,6 @@ android {
     compileSdkVersion 29
     buildToolsVersion "29.0.2"
     defaultConfig {
-        applicationId "nl.tudelft.ipv8"
         // Temp fix for issue https://github.com/mockk/mockk/issues/281
         // minSdkVersion 21
         minSdkVersion 26
