--- a/build.gradle
+++ b/build.gradle
@@ -2,14 +2,17 @@
 
 buildscript {
     ext.kotlin_version = '1.3.61'
+    ext.ktlint_version = '0.36.0'
+    ext.ktlint_gradle_version = '9.1.1'
     repositories {
         google()
         jcenter()
-
+        maven { url "https://plugins.gradle.org/m2/" }
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:3.5.3'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+        classpath "org.jlleitschuh.gradle:ktlint-gradle:$ktlint_gradle_version"
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
