--- a/ipv8/build.gradle
+++ b/ipv8/build.gradle
@@ -6,6 +6,15 @@ apply plugin: 'kotlin-android-extensions'
 
 apply plugin: 'jacoco'
 
+apply plugin: 'org.jlleitschuh.gradle.ktlint'
+
+ktlint {
+    version = "$ktlint_version"
+    android = true
+    outputToConsole = true
+    ignoreFailures = false
+}
+
 android {
     compileSdkVersion 29
     buildToolsVersion "29.0.2"
