--- a/demo-android/build.gradle
+++ b/demo-android/build.gradle
@@ -17,7 +17,7 @@ android {
 
 
     defaultConfig {
-        applicationId "nl.tudelft.ipv8.android.demo"
+        applicationId "nl.tudelft.ipv8.android.demo_currency"
         minSdkVersion 26
         targetSdkVersion 29
         versionCode 1
