--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,7 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
-    ext.kotlin_version = '1.3.61'
+    ext.kotlin_version = '1.3.70'
     ext.ktlint_version = '0.36.0'
     ext.ktlint_gradle_version = '9.1.1'
     ext.sqldelight_version = '1.2.2'
@@ -49,6 +49,7 @@ task clean(type: Delete) {
 
 tasks.withType(org.jetbrains.kotlin.gradle.tasks.KotlinCompile).all {
     kotlinOptions.freeCompilerArgs += [
-        "-Xuse-experimental=kotlin.Experimental,kotlin.ExperimentalUnsignedTypes"
+        "-Xuse-experimental=kotlin.Experimental,kotlin.ExperimentalUnsignedTypes",
+        "-Werror" // Set Kotlin compiler warnings as errors
     ]
 }
