--- a/demo-android/build.gradle
+++ b/demo-android/build.gradle
@@ -45,6 +45,10 @@ android {
     viewBinding {
         enabled = true
     }
+
+    testOptions {
+        unitTests.returnDefaultValues = true
+    }
 }
 
 dependencies {
@@ -86,7 +90,7 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
 
     // BitcoinJ
-    implementation 'org.bitcoinj:bitcoinj-core:0.15.6'
+    implementation 'org.bitcoinj:bitcoinj-core:0.15.7'
 
     // Google Core
     implementation "com.google.guava:guava:28.2-android"
