--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -17,7 +17,7 @@ jobs:
     - name: Run tests
       uses: eskatos/gradle-command-action@v1
       with:
-        arguments: check jacocoTestReport
+        arguments: check
 
     - name: Upload coverage to Codecov
       uses: codecov/codecov-action@v1
