--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -9,6 +9,14 @@ jobs:
     - name: Checkout
       uses: actions/checkout@v2
 
+    - name: Checkout submodules
+      shell: bash
+      run: |
+        git config --global url."https://github.com/".insteadOf "git@github.com:"
+        auth_header="$(git config --local --get http.https://github.com/.extraheader)"
+        git submodule sync --recursive
+        git -c "http.extraheader=$auth_header" -c protocol.version=2 submodule update --init --force --recursive --depth=1
+
     - name: Setup Java
       uses: actions/setup-java@v1
       with:
@@ -17,7 +25,7 @@ jobs:
     - name: Run tests
       uses: eskatos/gradle-command-action@v1
       with:
-        arguments: :app:check :common:check :trustchain-explorer:check :debug:check
+        arguments: check
 
     - name: Upload coverage to Codecov
       uses: codecov/codecov-action@v1
