--- a/app/build.gradle
+++ b/app/build.gradle
@@ -57,6 +57,7 @@ repositories {
 dependencies {
     implementation project(':common')
     implementation project(':trustchain-explorer')
+    implementation project(':trustchain-trader')
     implementation project(':debug')
     implementation project(':currencyii')
     implementation project(':FOC')
