--- a/app/build.gradle
+++ b/app/build.gradle
@@ -50,6 +50,7 @@ android {
 dependencies {
     implementation project(':common')
     implementation project(':trustchain-explorer')
+    implementation project(':trustchain-trader')
     implementation project(':debug')
 
     // AndroidX
