--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -37,6 +37,10 @@
             android:name="nl.tudelft.trustchain.debug.DebugActivity"
             android:parentActivityName=".ui.dashboard.DashboardActivity" />
 
+        <activity
+            android:name="nl.tudelft.trustchain.trader.ui.TrustChainTraderActivity"
+            android:parentActivityName=".ui.dashboard.DashboardActivity" />
+
         <service android:name="nl.tudelft.trustchain.app.service.TrustChainService" />
     </application>
 
