Add UI from QR-transfer

--- a/build.gradle
+++ b/build.gradle
@@ -24,6 +24,9 @@ buildscript {
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
+
+        // TODO: Find a way to move this to trustchain-trader
+        classpath "org.jetbrains.kotlin:kotlin-serialization:$kotlin_version"
     }
 }
 
