Can no longer go back after a transfer

--- a/trustchain-trader/build.gradle
+++ b/trustchain-trader/build.gradle
@@ -2,6 +2,7 @@ apply plugin: 'com.android.library'
 apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
 apply plugin: 'kotlinx-serialization'
+apply plugin: "androidx.navigation.safeargs"
 
 android {
     compileSdkVersion 29
@@ -45,6 +46,9 @@ dependencies {
 
     // Animation
     implementation 'com.airbnb.android:lottie:3.4.0'
+
+    implementation 'com.mattskala:itemadapter:0.3'
+
 
     // Kotlin
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
