--- a/trustchain-trader/build.gradle
+++ b/trustchain-trader/build.gradle
@@ -42,7 +42,7 @@ dependencies {
     // QR code
     implementation 'com.journeyapps:zxing-android-embedded:3.6.0'
     implementation 'com.android.support:multidex:1.0.3'
-    
+
     // Animation
     implementation 'com.airbnb.android:lottie:3.4.0'
 
@@ -52,4 +52,5 @@ dependencies {
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.3.3'
     implementation 'org.jetbrains.kotlinx:kotlinx-serialization-runtime:0.14.0'
     implementation "org.jetbrains.kotlin:kotlin-reflect:$kotlin_version"
+    implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
 }
