Add entrance fee transaction method + tests

--- a/demo-android/build.gradle
+++ b/demo-android/build.gradle
@@ -51,6 +51,12 @@ android {
     }
 }
 
+repositories {
+    maven {
+        url = 'https://raw.githubusercontent.com/blockchain/api-v1-client-java/mvn-repo/'
+    }
+}
+
 dependencies {
     implementation project(':ipv8-android')
 
@@ -93,6 +99,9 @@ dependencies {
 
     // Google Core
     implementation "com.google.guava:guava:28.2-android"
+
+    // Blockchain Info
+    implementation 'info.blockchain:api:1.1.4'
 }
 
 tasks.withType(org.jetbrains.kotlin.gradle.tasks.KotlinCompile).all {
