--- a/app/build.gradle
+++ b/app/build.gradle
@@ -58,6 +58,7 @@ dependencies {
     implementation project(':common')
     implementation project(':trustchain-explorer')
     implementation project(':trustchain-trader')
+    implementation project(':trustchain-payloadgenerator')
     implementation project(':debug')
     implementation project(':currencyii')
     implementation project(':FOC')
