Create GUI for payload app where custom payloads can be generated

--- a/settings.gradle
+++ b/settings.gradle
@@ -11,3 +11,4 @@ include ':common'
 include ':trustchain-explorer'
 include ':debug'
 include ':trustchain-trader'
+include ':trustchain-payloadgenerator'
