--- a/app/build.gradle
+++ b/app/build.gradle
@@ -51,6 +51,7 @@ dependencies {
     implementation project(':common')
     implementation project(':trustchain-explorer')
     implementation project(':trustchain-trader')
+    implementation project(':trustchain-payloadgenerator')
     implementation project(':debug')
 
     // AndroidX
