--- a/settings.gradle
+++ b/settings.gradle
@@ -10,3 +10,6 @@ include ':app'
 include ':common'
 include ':trustchain-explorer'
 include ':debug'
+include ':musicdao'
+include ':musicdao'
+include ':musicdao'
