--- a/app/build.gradle
+++ b/app/build.gradle
@@ -51,6 +51,7 @@ dependencies {
     implementation project(':common')
     implementation project(':trustchain-explorer')
     implementation project(':debug')
+    implementation project(':FOC')
 
     // AndroidX
     implementation 'androidx.appcompat:appcompat:1.1.0'
