--- a/trustchain-trader/build.gradle
+++ b/trustchain-trader/build.gradle
@@ -78,4 +78,7 @@ dependencies {
     implementation 'org.jetbrains.kotlinx:kotlinx-serialization-runtime:0.14.0'
     implementation "org.jetbrains.kotlin:kotlin-reflect:$kotlin_version"
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
+
+    // https://mvnrepository.com/artifact/com.opencsv/opencsv
+    implementation group: 'com.opencsv', name: 'opencsv', version: '3.7'
 }
