--- a/common/build.gradle
+++ b/common/build.gradle
@@ -46,6 +46,7 @@ android {
 
 dependencies {
     api project(':ipv8-android')
+    api project(':ipv8')
 
     // AndroidX
     implementation 'androidx.appcompat:appcompat:1.1.0'
@@ -76,8 +77,13 @@ dependencies {
 
     implementation 'com.mattskala:itemadapter:0.3'
 
+    // Crypto
+    implementation "com.goterl.lazycode:lazysodium-java:4.2.4"
+
     // Testing
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
+    testImplementation 'org.jetbrains.kotlinx:kotlinx-coroutines-test:1.3.3'
+    testImplementation "io.mockk:mockk:1.9.3"
 }
