retrieve voteSubject from the proposal block instead of seperate parameter for easier use.

--- a/common/build.gradle
+++ b/common/build.gradle
@@ -42,6 +42,10 @@ android {
     viewBinding {
         enabled = true
     }
+
+    testOptions {
+        unitTests.returnDefaultValues = true
+    }
 }
 
 dependencies {
