--- a/common/build.gradle
+++ b/common/build.gradle
@@ -90,4 +90,6 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
     testImplementation 'org.jetbrains.kotlinx:kotlinx-coroutines-test:1.3.3'
     testImplementation "io.mockk:mockk:1.9.3"
+    testImplementation 'org.json:json:20190722'
+
 }
