Added libtorrent for other architectures

--- a/FOC/build.gradle
+++ b/FOC/build.gradle
@@ -57,4 +57,7 @@ dependencies {
     implementation 'androidx.navigation:navigation-ui-ktx:2.2.1'
     implementation files('libs\\jlibtorrent-1.2.5.0.jar')
     implementation files('libs\\jlibtorrent-android-arm64-1.2.5.0.jar')
+    implementation files('libs\\jlibtorrent-android-arm-1.2.5.0.jar')
+    implementation files('libs\\jlibtorrent-android-x86-1.2.5.0.jar')
+    implementation files('libs\\jlibtorrent-android-x86_64-1.2.5.0.jar')
 }
