--- a/common/build.gradle
+++ b/common/build.gradle
@@ -91,5 +91,7 @@ dependencies {
     testImplementation 'org.jetbrains.kotlinx:kotlinx-coroutines-test:1.3.3'
     testImplementation "io.mockk:mockk:1.9.3"
     testImplementation 'org.json:json:20190722'
+    testImplementation "com.squareup.sqldelight:sqlite-driver:$sqldelight_version"
+
 
 }
