Do not ignore ktlint failures, set compiler warnings as errors

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,6 +40,7 @@ android {
     }
     kotlinOptions {
         jvmTarget = "1.8"
+        allWarningsAsErrors = true
     }
 
     viewBinding {
@@ -89,7 +90,6 @@ dependencies {
 
 tasks.withType(org.jetbrains.kotlin.gradle.tasks.KotlinCompile).all {
     kotlinOptions.freeCompilerArgs += [
-        "-Xuse-experimental=kotlin.Experimental,kotlin.ExperimentalUnsignedTypes",
-        "-Werror" // Set Kotlin compiler warnings as errors
+        "-Xuse-experimental=kotlin.Experimental,kotlin.ExperimentalUnsignedTypes"
     ]
 }
