--- a/currencyii/build.gradle
+++ b/currencyii/build.gradle
@@ -8,13 +8,12 @@ ktlint {
     version = "$ktlint_version"
     android = true
     outputToConsole = true
-    ignoreFailures = true
+    ignoreFailures = false
 }
 
 android {
     compileSdkVersion 29
     buildToolsVersion "29.0.2"
-
 
     defaultConfig {
         minSdkVersion 24
