Add lazysodium java test dependency

--- a/common/build.gradle
+++ b/common/build.gradle
@@ -89,6 +89,6 @@ dependencies {
     testImplementation "io.mockk:mockk:1.9.3"
     testImplementation 'org.json:json:20190722'
     testImplementation "com.squareup.sqldelight:sqlite-driver:$sqldelight_version"
-
+    testImplementation "com.goterl.lazycode:lazysodium-java:4.2.4"
 
 }
