--- a/build.gradle
+++ b/build.gradle
@@ -1,12 +1,12 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
-    ext.kotlin_version = '1.3.61'
+    ext.kotlin_version = '1.3.71'
     ext.ktlint_version = '0.36.0'
     ext.ktlint_gradle_version = '9.1.1'
     ext.sqldelight_version = '1.2.2'
     ext.nav_version = "2.2.1"
-    ext.fragment_version = "1.2.2"
+    ext.fragment_version = '1.2.4'
     ext.lifecycle_version = "2.2.0"
     ext.dokka_version = "0.10.1"
     repositories {
