--- a/currencyii/build.gradle
+++ b/currencyii/build.gradle
@@ -1,7 +1,7 @@
 apply plugin: 'com.android.library'
 apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
-apply plugin: "androidx.navigation.safeargs"
+apply plugin: 'androidx.navigation.safeargs.kotlin'
 apply plugin: 'org.jlleitschuh.gradle.ktlint'
 
 ktlint {
