implemented duplicate module fix

--- a/common/build.gradle
+++ b/common/build.gradle
@@ -51,7 +51,6 @@ android {
 
 dependencies {
     api project(':ipv8-android')
-    api project(':ipv8')
 
     // AndroidX
     implementation 'androidx.appcompat:appcompat:1.1.0'
@@ -82,9 +81,6 @@ dependencies {
 
     implementation 'com.mattskala:itemadapter:0.3'
 
-    // Crypto
-    implementation "com.goterl.lazycode:lazysodium-java:4.2.4"
-
     // Testing
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
@@ -93,6 +89,7 @@ dependencies {
     testImplementation "io.mockk:mockk:1.9.3"
     testImplementation 'org.json:json:20190722'
     testImplementation "com.squareup.sqldelight:sqlite-driver:$sqldelight_version"
+    testImplementation "com.goterl.lazycode:lazysodium-java:4.2.4"
 
 
 }
