--- a/app/build.gradle
+++ b/app/build.gradle
@@ -56,6 +56,7 @@ repositories {
 
 dependencies {
     implementation project(':common')
+    implementation project(':voting')
     implementation project(':trustchain-explorer')
     implementation project(':trustchain-trader')
     implementation project(':trustchain-payloadgenerator')
