--- a/FOC/build.gradle
+++ b/FOC/build.gradle
@@ -41,7 +41,7 @@ android {
     }
     kotlinOptions {
         jvmTarget = "1.8"
-        allWarningsAsErrors = false
+        allWarningsAsErrors = true
     }
 
     viewBinding {
