--- a/musicdao/build.gradle
+++ b/musicdao/build.gradle
@@ -56,6 +56,11 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
     implementation 'androidx.navigation:navigation-fragment-ktx:2.2.2'
     implementation 'androidx.navigation:navigation-ui-ktx:2.2.2'
-    implementation 'com.frostwire:jlibtorrent-android-arm64:1.2.0.18'
+//    implementation 'com.frostwire:jlibtorrent-android-arm64:1.2.0.18'
     implementation 'com.turn:ttorrent-core:1.5'
+//    implementation 'com.github.mpetazzoni.ttorrent:ttorrent:ttorrent-2.0'
+//    implementation 'com.github.mpetazzoni.ttorrent:ttorrent-tracker:ttorrent-2.0'
+//    implementation 'com.github.mpetazzoni.ttorrent:ttorrent-client:ttorrent-2.0'
+    implementation 'com.github.TorrentStream:TorrentStream-Android:2.7.0'
+    //    implementation 'com.github.atomashpolskiy:bt-upnp:1.9'
 }
