--- a/FOC/build.gradle
+++ b/FOC/build.gradle
@@ -61,6 +61,7 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
     implementation project(':common')
+    implementation project(':voting')
     implementation 'androidx.navigation:navigation-fragment-ktx:2.2.1'
     implementation 'androidx.navigation:navigation-ui-ktx:2.2.1'
     implementation files('libs/jlibtorrent-1.2.5.0.jar')
