--- a/settings.gradle
+++ b/settings.gradle
@@ -14,4 +14,4 @@ include ':trustchain-trader'
 include ':trustchain-payloadgenerator'
 include ':currencyii'
 include ':FOC'
-include ':voting'
+include ':trustchain-voter'
