--- a/settings.gradle
+++ b/settings.gradle
@@ -13,5 +13,5 @@ include ':debug'
 include ':trustchain-trader'
 include ':trustchain-payloadgenerator'
 include ':currencyii'
-include ':FOC'
+include ':freedomOfComputing'
 include ':trustchain-voter'
