Add signing config

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,10 +36,20 @@ android {
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
 
+    signingConfigs {
+        release {
+            keyAlias "trustchain"
+            keyPassword "ageoftrust"
+            storeFile file("trustchain-superapp.jks")
+            storePassword "ageoftrust"
+        }
+    }
+
     buildTypes {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
+            signingConfig signingConfigs.release
         }
     }
 
