--- a/app/build.gradle
+++ b/app/build.gradle
@@ -22,6 +22,11 @@ ktlint {
     ignoreFailures = false
 }
 
+// Generate a version code from git commit count
+static def generateVersionCode() {
+    return "git rev-list HEAD --count".execute().text.trim().toInteger()
+}
+
 android {
     compileSdkVersion 29
     buildToolsVersion "29.0.3"
@@ -30,8 +35,8 @@ android {
         applicationId "nl.tudelft.trustchain"
         minSdkVersion 24
         targetSdkVersion 29
-        versionCode 1
-        versionName "1.0"
+        versionCode generateVersionCode()
+        versionName "0.1"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
