Print version code during build

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -24,7 +24,9 @@ ktlint {
 
 // Generate a version code from git commit count
 static def generateVersionCode() {
-    return "git rev-list HEAD --count".execute().text.trim().toInteger()
+    int versionCode = "git rev-list HEAD --count".execute().text.trim().toInteger()
+    print("Version code: $versionCode")
+    return versionCode
 }
 
 android {
