--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,13 +12,13 @@
     <uses-permission android:name="android.permission.FOREGROUND_SERVICE" />
 
     <application
+        android:name="nl.tudelft.trustchain.app.TrustChainApplication"
+        android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
-        android:name="nl.tudelft.trustchain.app.TrustChainApplication"
-        android:allowBackup="true"
         tools:ignore="AllowBackup">
 
         <activity
@@ -61,7 +61,9 @@
             android:name="nl.tudelft.trustchain.voting.VotingActivity"
             android:parentActivityName=".ui.dashboard.DashboardActivity" />
 
-        <activity android:name="com.example.musicdao.MusicService" />
+        <activity
+            android:name="com.example.musicdao.MusicService"
+            android:parentActivityName=".ui.dashboard.DashboardActivity" />
 
         <service android:name="nl.tudelft.trustchain.app.service.TrustChainService" />
     </application>
