--- a/common/build.gradle
+++ b/common/build.gradle
@@ -64,6 +64,8 @@ dependencies {
     implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:$lifecycle_version"
     implementation "androidx.lifecycle:lifecycle-livedata-ktx:$lifecycle_version"
 
+    // QR
+    implementation 'com.journeyapps:zxing-android-embedded:3.6.0'
 
     // Material
     implementation 'com.google.android.material:material:1.1.0'
