--- a/common/build.gradle
+++ b/common/build.gradle
@@ -82,6 +82,12 @@ dependencies {
 
     implementation 'com.mattskala:itemadapter:0.3'
 
+    // BitTorrent
+    api files('libs/jlibtorrent-1.2.5.0.jar')
+    api files('libs/jlibtorrent-android-arm64-1.2.5.0.jar')
+    api files('libs/jlibtorrent-android-arm-1.2.5.0.jar')
+    api files('libs/jlibtorrent-android-x86-1.2.5.0.jar')
+    api files('libs/jlibtorrent-android-x86_64-1.2.5.0.jar')
 
     // Testing
     testImplementation 'junit:junit:4.12'
