Add contacts to eurotoken

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -63,7 +63,8 @@
 
         <activity
             android:name="nl.tudelft.trustchain.eurotoken.EuroTokenMainActivity"
-            android:parentActivityName=".ui.dashboard.DashboardActivity" />
+            android:parentActivityName=".ui.dashboard.DashboardActivity"
+            android:theme="@style/Theme.PeerChat" />
 
         <activity
             android:name="nl.tudelft.trustchain.FOC.MainActivityFOC"
