--- a/app/build.gradle
+++ b/app/build.gradle
@@ -77,6 +77,7 @@ android {
 
     packagingOptions {
         exclude 'META-INF/kotlinx-coroutines-core.kotlin_module'
+        exclude 'META-INF/DEPENDENCIES'
     }
 }
 
